--- a/client/css/parcials/_colors.scss
+++ b/client/css/parcials/_colors.scss
@@ -7,3 +7,9 @@ $p-color-white: #fffcf6;
 $bg-dark-bege: #eeddb4;
 
 $bg-light-bege: #fffaec;
+
+$bg-light-wine: #ab5d5d;
+
+body{
+    background-color: $bg-dark-bege;
+}
