--- a/client/css/components/_login.scss
+++ b/client/css/components/_login.scss
@@ -1,5 +1,6 @@
 @import "../parcials/colors";
 @import "../parcials/typo";
+@import "../parcials/mixins";
 
 .modal {
     display: none;
@@ -8,7 +9,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.5);
 
     &_content {
         background-color: #fff;
@@ -19,6 +20,21 @@
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         text-align: center;
     }
+}
+
+#loginForm {
+    @include flex(center, center);
+    flex-direction: column;
+    margin: 5% auto;
+    width: 50%;
+    text-align: center;
+    input{
+        margin: 5px;
+    }
+}
+
+#registerForm {
+    display: none;
 }
 
 .close {
