--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -473,7 +473,7 @@ button.filter_btn {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .modal_content {
   background-color: #fff;
@@ -483,6 +483,23 @@ button.filter_btn {
   width: 50%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
+}
+
+#loginForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 5% auto;
+  width: 50%;
+  text-align: center;
+}
+#loginForm input {
+  margin: 5px;
+}
+
+#registerForm {
+  display: none;
 }
 
 .close {
