--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -930,6 +930,7 @@ button.filter_btn {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding: 60px 20px 40px;
   background-color: #eeddb4;
 }
@@ -943,10 +944,7 @@ button.filter_btn {
 
 .searchResultItem {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-}
-.searchResultItem img {
-  width: 5%;
-  padding: 5px;
+  margin-top: 15px;
 }/*# sourceMappingURL=styles.css.map */
