--- a/client/css/parcials/_grid.scss
+++ b/client/css/parcials/_grid.scss
@@ -14,9 +14,10 @@
 
 .row {
 	margin: 20px auto;
+	padding: 10px;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: flex-start;
 	gap: 8px;
 }
 
