--- a/client/css/components/_movie-card.scss
+++ b/client/css/components/_movie-card.scss
@@ -1,3 +1,32 @@
-img{
-    max-width: 150px;
+@import "../parcials/colors";
+@import "../parcials/typo";
+@import "../parcials/mixins";
+
+
+.movie_card_thumbnail {
+    background-color: rgba($p-color-black, 0.8);
+    margin-top: 8px;
+    min-height: 120px;
+    padding: 40px;
+    min-width: 200px;
+
+    .card-body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-img {
+        @include flex(center, center);
+        padding: 25px;
+        img{
+            max-width: 180px;
+            aspect-ratio: 2/3;
+            object-fit: cover;
+        }
+    }
+
+    .admin_crud {
+        @include flex(center, center);
+        gap: 20px;
+    }
 }
