--- a/client/css/components/_movie-page.scss
+++ b/client/css/components/_movie-page.scss
@@ -4,18 +4,50 @@
 
 
 .movie_card {
-    background-color: rgba($p-color-black, 0.8);
     @include flex(flex-start, flex-start);
     flex-wrap: wrap;
-    margin-top: 80px;
-    min-height: 120px;
-    padding: 40px;
-
-    &_trailer {
-        max-width: 33%;
-    }
+    gap: 8px;
 
     &_info {
-        padding: 8px;
+        background-color: rgba($p-color-black, 0.8);
+        @include flex(flex-start, flex-start);
+        padding: 40px;
+        gap: 20px;
+        .movie-img{
+            img{
+                max-width: 300px;
+                aspect-ratio: 2/3;
+                object-fit: cover;
+            }
+        }
+    }
+
+    &_rating {
+        img{
+            max-width: 100px;
+        }
+        .search_filter {
+            label{
+                display: flex;
+                align-items: flex-end;
+                margin-bottom: 4px;
+            }
+            select, option {
+                background-color: $bg-light-bege;
+                border: none;
+                outline: none;
+                width: 100%;
+                padding: 8px;
+            }
+        }
     }
 }
+
+// <div class="col-lg-8 movie_card_info">
+//   <a class="card-img" href="${movie.trailerLink}" target="_blank">
+//       <img src="${movie.posterUrl}" alt="movie-poster">
+//     </a>
+//     <h2>${movie.title}</h2>
+//     <h3>${onlyYear}, ${movie.filmDirector.join(', ')}</h3>
+//     <h3>${movie.genres.join(', ')}</h3>
+//   </div>`;
