--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -26,13 +26,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -71,17 +71,53 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
   color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
 }
 
 .login_btn {
@@ -108,6 +144,27 @@ button.filter_btn {
   box-shadow: 0 5px 5px 0px #ab5d5d;
 }
 
+.delete_btn, .edit_btn {
+  background-color: #973e3e;
+  border: none;
+  padding: 8px;
+  width: 55px;
+}
+.delete_btn:hover, .edit_btn:hover {
+  cursor: pointer;
+}
+
+.rate_btn {
+  background-color: #fffaec;
+  border: none;
+  padding: 8px;
+  margin: 20px;
+}
+.rate_btn:hover {
+  cursor: pointer;
+  box-shadow: 0 3px 5px 0px #ab5d5d;
+}
+
 body {
   background-color: #eeddb4;
 }
@@ -128,9 +185,10 @@ body {
 
 .row {
   margin: 20px auto;
+  padding: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 8px;
 }
 
@@ -322,13 +380,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -367,17 +425,53 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
   color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
 }
 
 body {
@@ -408,13 +502,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -453,17 +547,53 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
   color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
 }
 
 .modal {
@@ -507,10 +637,6 @@ button.filter_btn {
   cursor: pointer;
 }
 
-img {
-  max-width: 150px;
-}
-
 body {
   background-color: #eeddb4;
 }
@@ -539,13 +665,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -584,33 +710,241 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
+  color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
   color: #fffaec;
 }
 
-.movie_card {
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
+}
+
+.movie_card_thumbnail {
   background-color: rgba(26, 26, 26, 0.8);
+  margin-top: 8px;
+  min-height: 120px;
+  padding: 40px;
+  min-width: 200px;
+}
+.movie_card_thumbnail .card-body {
+  display: flex;
+  flex-direction: column;
+}
+.movie_card_thumbnail .card-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+}
+.movie_card_thumbnail .card-img img {
+  max-width: 180px;
+  aspect-ratio: 2/3;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.movie_card_thumbnail .admin_crud {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+body {
+  background-color: #eeddb4;
+}
+
+body {
+  background-color: #eeddb4;
+}
+
+@font-face {
+  font-family: "Roboto", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+}
+a {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  color: #1a1a1a;
+}
+a:hover {
+  cursor: pointer;
+}
+
+p {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  color: #1a1a1a;
+}
+
+.search_filter label, .pagination label {
+  font-size: 12.6px;
+  font-family: "Roboto", sans-serif;
+  color: #1a1a1a;
+  text-transform: uppercase;
+}
+.search_filter select, .search_filter option, .pagination select, .pagination option {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #1a1a1a;
+  text-transform: capitalize;
+}
+
+.searchbar input {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #1a1a1a;
+  text-transform: capitalize;
+}
+
+button.login_btn {
+  font-size: 16.8px;
+  font-family: "Roboto", sans-serif;
+  color: #1a1a1a;
+  text-transform: capitalize;
+}
+button.login_btn:hover {
+  font-weight: bold;
+  color: #973e3e;
+}
+button.login_btn_submit {
+  text-transform: uppercase;
+}
+
+button.filter_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+
+.movie_card_info {
+  font-family: "Roboto", sans-serif;
+  color: #fffaec;
+  text-transform: capitalize;
+  line-height: 200%;
+}
+.movie_card_info h2 {
+  font-size: 28px;
+  margin-bottom: 30px;
+}
+.movie_card_info h3 {
+  font-size: 14px;
+}
+.movie_card_info p {
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
+  color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
+}
+
+.movie_card {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-top: 80px;
-  min-height: 120px;
-  padding: 40px;
-}
-.movie_card_trailer {
-  max-width: 33%;
+  gap: 8px;
 }
 .movie_card_info {
+  background-color: rgba(26, 26, 26, 0.8);
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 40px;
+  gap: 20px;
+}
+.movie_card_info .movie-img img {
+  max-width: 300px;
+  aspect-ratio: 2/3;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.movie_card_rating img {
+  max-width: 100px;
+}
+.movie_card_rating .search_filter label {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 4px;
+}
+.movie_card_rating .search_filter select, .movie_card_rating .search_filter option {
+  background-color: #fffaec;
+  border: none;
+  outline: none;
+  width: 100%;
   padding: 8px;
 }
 
@@ -642,13 +976,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -687,17 +1021,53 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
   color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
 }
 
 .navbar {
@@ -757,13 +1127,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -802,20 +1172,56 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
+  color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
   color: #fffaec;
 }
 
-.search_filters {
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
+}
+
+.search_filters, .pagination {
   background-color: #eeddb4;
   padding: 20px;
 }
@@ -838,6 +1244,21 @@ button.filter_btn {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin-top: 20px;
+}
+.pagination select, .pagination option {
+  background: none;
+  border: none;
+  outline: none;
+  padding: 8px;
+  width: 50px;
 }
 
 body {
@@ -868,13 +1289,13 @@ p {
   color: #1a1a1a;
 }
 
-.search_filter label {
+.search_filter label, .pagination label {
   font-size: 12.6px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
   text-transform: uppercase;
 }
-.search_filter select, .search_filter option {
+.search_filter select, .search_filter option, .pagination select, .pagination option {
   font-size: 11.2px;
   font-family: "Roboto", sans-serif;
   color: #1a1a1a;
@@ -913,17 +1334,53 @@ button.filter_btn {
   font-family: "Roboto", sans-serif;
   color: #fffaec;
   text-transform: capitalize;
-  line-height: 150%;
+  line-height: 200%;
 }
 .movie_card_info h2 {
-  font-size: 16.8px;
+  font-size: 28px;
+  margin-bottom: 30px;
 }
 .movie_card_info h3 {
-  font-size: 12.6px;
+  font-size: 14px;
 }
 .movie_card_info p {
-  font-size: 9.8px;
+  font-size: 11.2px;
+}
+
+.card-body {
+  font-family: "Roboto", sans-serif;
   color: #fffaec;
+  text-transform: capitalize;
+  line-height: 120%;
+}
+.card-body .card-title {
+  font-size: 15.4px;
+  color: #fffaec;
+  margin-bottom: 10px;
+}
+.card-body .card-text {
+  font-size: 12.6px;
+  color: #fffaec;
+}
+
+button.delete_btn, button.edit_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #fffcf6;
+  text-transform: uppercase;
+}
+button.delete_btn:hover, button.edit_btn:hover {
+  font-weight: bold;
+}
+
+button.rate_btn {
+  font-size: 11.2px;
+  font-family: "Roboto", sans-serif;
+  color: #ab5d5d;
+  text-transform: uppercase;
+}
+button.rate_btn:hover {
+  font-weight: bold;
 }
 
 .searchbar {
