--- a/client/css/components/_movie-page.scss
+++ b/client/css/components/_movie-page.scss
@@ -26,7 +26,11 @@
         img{
             max-width: 100px;
         }
-        .search_filter {
+        .rating_review {
+            margin-left: 20px;
+            @include flex(flex-start, flex-start);
+            flex-direction: column;
+            gap: 8px;
             label{
                 display: flex;
                 align-items: flex-end;
@@ -39,8 +43,23 @@
                 width: 100%;
                 padding: 8px;
             }
+            input {
+                background-color: $bg-light-bege;
+                border: none;
+                outline: none;
+                width: 100%;
+                height: 300px;
+            }
+        }
+        button {
+            margin-top: 10px;
         }
     }
+}
+
+.admin_crud {
+    @include flex(center, center);
+    gap: 20px;
 }
 
 // <div class="col-lg-8 movie_card_info">
